# fastapi-sample

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: auth.py  database.py  main.py  utils.py
backend/app/crud/: notes.py
backend/app/models/: __init__.py  notes.py
backend/app/schemas/: notes.py
backend/migrations/: env.py
backend/migrations/versions/: 3e4e22735eb4_create_notes.py  b34db6e66448_create_notes_table.py
frontend/: .env.example  LICENSE  README.md  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx
frontend/app/dashboard/(overview)/: page.tsx
frontend/app/dashboard/notes/: page.tsx
frontend/app/dashboard/notes/[id]/edit/: not-found.tsx  page.tsx
frontend/app/dashboard/notes/create/: page.tsx
frontend/app/hooks/: useNotesApi.ts  useSupabase.ts
frontend/app/lib/: actions.ts  auth0Token.ts  data.ts  definitions.ts
frontend/app/login/: page.tsx
frontend/app/providers/: provider-auth0.tsx  provider-react-query.tsx  provider-supabase-auth.tsx
frontend/app/ui/: base-logo.tsx  skeletons.tsx
frontend/app/ui/dashboard/: cards.tsx  nav-links.tsx  sidenav.tsx
frontend/app/ui/notes/: buttons.tsx  create-form.tsx  edit-form.tsx  table.tsx
frontend/app/zodSchemas/: note.ts
supabase/: config.toml
