[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "psycopg>=3.2.6",
    "psycopg2>=2.9.10",
    "pyjwt[crypto]>=2.10.1",
    "uvicorn[standard]>=0.34.2",
]
# psycopg2はAlembic用

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
